css/style.css
body{
    position: relative;
    /* width: 100%;
    height: 100%; */
    /* margin: 0;
    padding: 0; */
    overflow-x: hidden;
}

.navbar {
  background-color: #fff;
}

.bg-primary {
  background-color:#393a39 !important;
}

.btn-circle {
  height: 60px;
  width: 60px;
  border-radius: 50%;
}

@media screen and (max-width: 800px) {
  img {
    width: 100%;
    height: auto;
  }
}

a:link {
  color: white; 
  background-color: transparent; 
  text-decoration: none;
}

a:visited {
  color: white;
  background-color: transparent;
  text-decoration: none;
}

a:hover {
  color: #29c56f;
  background-color: transparent;
  text-decoration: none;
}

a:active {
  color: #29c56f;
  background-color: transparent;
  text-decoration: none;
}

.left-half {
  background-color: #29c56f;
  height: 100vh;
  position: absolute;
  left: 0px;
  width: 50%;
  text-align: right;
  z-index: 0;
  padding-right: 10px;
}

.left-half:hover + .right-half {
  background-position: left bottom;

}

.right-half {
  background: linear-gradient(to right, #29c56f 50%, #757574 50%);
  background-size: 200% 100%;
  background-position: right bottom;
  transition: all 1s ease-out;
  height: 100vh;
  position: absolute;
  right: 0px;
  width: 50%;
  z-index: 0;
  padding-left: 10px;
}

.my-path {
  fill:none;
  stroke:#ffffff;
  stroke-width:3;
  
}

.lineDrawing{
  width: 100%;
  position: absolute;
  text-align: center;
  z-index: 1;
}

#home {
  /* padding-top:50px; */
  height:100vh;
  color: #fff;
  /* background-image: url("mountains.jpg"); */
  background-attachment: fixed;
  background-position: center;
  background-repeat:no-repeat;
  background-size:cover;
}


#about {
  padding-top:50px;
  height:100%;
  color: #fff;
  background-color: #757574;
  padding-bottom: 50px;
}

#experience {
  padding-top:50px;
  height:100%;
  color: #fff;
  background-color: #29c56f;
  padding-bottom: 50px;
}

#projects {
  padding-top:50px;
  height:100%;
  color: #fff;
  background-color: #757574;
  padding-bottom: 50px;
}

